tests/snapshots/cli_help__cli_help_show_episodes.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Print a podcast show's episodes (with listened state)

Usage: spotuify show episodes [OPTIONS] <SHOW>

Arguments:
  <SHOW>  Show ID or URI

Options:
      --limit <LIMIT>            [default: 50]
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
      --offset <OFFSET>          [default: 0]
      --format <FORMAT>          [default: table] [possible values: table, json, jsonl, csv, ids]
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
  -h, --help                     Print help
